+---------+---------+---------+---------+---------+---------+---------+---------+ 
d_am.2015/05/20.09_57_19.33.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	modified:   ncftp-1.9.5/util.c

+---------+---------+---------+---------+---------+---------+---------+---------+ 
D.End.2015/05/20.17_47_12.69.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
cpp_derived.2015/05/21.15_53_55.23.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   "Code/Cpp/\346\265\213\350\257\225\345\237\272\347\261\273\345\255\220\347\261\273\346\214\207\351\222\210\350\260\203\347\224\250\350\231\232\345\207\275\346\225\260/TestDerived.cpp"
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
cPP_code_derived_test.2015/05/21.15_56_17.85.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   "Code/Cpp/\346\265\213\350\257\225\345\237\272\347\261\273\345\255\220\347\261\273\346\214\207\351\222\210\350\260\203\347\224\250\350\231\232\345\207\275\346\225\260/TestDerived.cpp"
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
3ds_max.2015/05/21.18_09_20.99.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
