@@ -59,9 +59,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-21 18:09:00 L.224'21060 T2791790160.K ~257 +----+----+----+----+----+
-     TimeCnt : //z 2015-05-13 12:38:40 L.232'40880 T1534596209.K ~9   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-05-21 17:49:30 L.224'22230 T1505065974.K ~14  +----+----+----+----+----+
+     Zndex_E : //z 2015-05-22 17:23:47 L.223'23773 T1570279927.K ~268 +----+----+----+----+----+
+     TimeCnt : //z 2015-05-22 17:23:06 L.223'23814 T1570279794.K ~10  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15  +----+----+----+----+----+
+     #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
      #14  R+ : //z 2015-05-21 17:49:30 L.224'22230 T1505065974.K ~14    V+.196  L+.236  
      #13  R+ : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~13    V+.179  L+.227  
      #12  R+ : //z 2015-05-13 13:48:24 L.232'36696 T2827250037.K ~12    V+.174  L+.221  
@@ -77,7 +78,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-21 18:09:00 L.224'21060 T2791790160.K ~271   R+.14   L+.289  --+----+
+     Version : //z 2015-05-22 17:23:47 L.223'23773 T1570279927.K ~283   R+.15   L+.315  --+----+
+     #14  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~273   R+.15   L+.296  V+.273  
      #14  V+ : //z 2015-05-21 18:07:22 L.224'21158 T2791718354.K ~266   R+.14   L+.280  
      #13  V+ : //z 2015-05-21 17:58:28 L.224'21692 T1506215933.K ~247   R+.14   L+.270  
      #12  V+ : //z 2015-05-21 17:54:48 L.224'21912 T1506072251.K ~228   R+.14   L+.255  
@@ -288,3 +290,46 @@ http://www.the-labs.com/Blender/3DS-details.html
 
 http://www.spacesimulator.net/tutorials/3ds_loader_tutorial.html
 #endregion //z 2015-05-21 17:49:30 L.224'22230 BG57IV3@XCL T1505065974.K.F4146951713-+----+----+
+
+#region 05-22 17:22 R#.15   @CMakeFile
+//z 2015-05-22 17:23:06 L.223'23814 T1570279794.K[T10,L295,R15,V276]
+01. 
+cmake 生成vc 项目文件
+新建vc win32工程，有源码文件program1.cpp, stdafx.cpp
+新建CMakeLists.txt，写入
+cmake_minimum_required(VERSION 2.8)
+
+PROJECT(program1)
+
+IF(WIN32)
+    ADD_DEFINITIONS("-D_WINDOWS -D__WIN__ -D_CRT_SECURE_NO_DEPRECATE")
+    ADD_DEFINITIONS("-D_WIN32_WINNT=0x0501")
+ENDIF(WIN32)
+
+SET (PLATFORM X86)
+
+add_executable(program2 program1.cpp stdafx.cpp)
+
+在vc 的开发使用的命令提示符下运行cmake-gui.exe，设置项目所在目录和生成的项目文件所在目录，点configure后，出现各种项目的选择，这里选择 visual studio 10, use default native compilers
+然后点finish，配置完成，再点generate，生成sln,vcxproj等项目文件
+________________________________________________________________________________________________
+用cmake生成vs解决方案时，如果项目比较多，比如引用了很多开源库之类的，如果对项目进行分类，那源文件组织结构将清晰很多
+
+在CMakeLists.txt的
+
+cmake_minimum_required(VERSION 2.6)
+
+前面加上这么一句
+
+set_property(GLOBAL PROPERTY USE_FOLDERS On)
+
+ 
+
+然后就可以在目标之后，即
+
+add_library,add_executable
+
+加入一句
+
+set_target_properties(${prj_target} PROPERTIES FOLDER "test") 
+#endregion //z 2015-05-22 17:22:59 L.223'23821 BG57IV3@XCL T1570244025.K.F4146951713-+----+----+
